name:               insieme-hat
version:            0.2
synopsis:           "Analysis framework based on ideas from the book: Principles of Program Analysis."
license:            GPL-3
author:             Thomas Prokosch <tprokos@dps.uibk.ac.at>, Alex Hirsch <alexander.hirsch@uibk.ac.at>
maintainer:         Thomas Prokosch <tprokos@dps.uibk.ac.at>
build-type:         Simple
cabal-version:      >=1.10

executable insieme-hat
    main-is:            Main.hs
    other-modules:      Compiler.Analysis,
                        Compiler.Analysis.Constraint,
                        Compiler.Analysis.Constraint.Dynamic,
                        Compiler.Analysis.Dependence,
                        Compiler.Analysis.Solver,
                        Compiler.Analysis.Values,
                        Insieme.Analysis.Solver,
                        Insieme.Analysis.Boolean,
                        Insieme.Analysis.Callable,
                        Insieme.Analysis.Reachable,
                        Insieme.Analysis.Framework.Dataflow,
                        Insieme.Inspire,
                        Insieme.Inspire.BinaryParser,
                        Insieme.Inspire.NodeAddress,
                        Insieme.Inspire.ThHelpers,
                        Insieme.Inspire.Utils,
                        Framework
    build-depends:      base >=4.7,
                        mtl >=2.2,
                        lens >=4.13,
                        containers >=0.5,
                        pretty-show >=1.6,
                        bytestring >=0.10,
                        template-haskell >=2.9,
                        transformers >=0.4,
                        attoparsec-binary >=0.2,
                        attoparsec >=0.13,
                        hashable >= 1.2.4,
                        process >= 1.2.3
    hs-source-dirs:     src
    include-dirs:       include,
                        ../../../../core/include
    default-language:   Haskell2010

library
    exposed-modules:    Insieme.Adapter
    other-modules:      Compiler.Analysis,
                        Compiler.Analysis.Constraint,
                        Compiler.Analysis.Constraint.Dynamic,
                        Compiler.Analysis.Dependence,
                        Compiler.Analysis.Solver,
                        Compiler.Analysis.Values,
                        Insieme.Analysis.Solver,
                        Insieme.Analysis.Boolean,
                        Insieme.Analysis.Callable,
                        Insieme.Analysis.Reachable,
                        Insieme.Analysis.Framework.Dataflow,
                        Insieme.Inspire,
                        Insieme.Inspire.BinaryParser,
                        Insieme.Inspire.NodeAddress,
                        Insieme.Inspire.ThHelpers,
                        Insieme.Inspire.Utils
    build-depends:      base >=4.7,
                        mtl >=2.2,
                        lens >=4.13,
                        containers >=0.5,
                        pretty-show >=1.6,
                        bytestring >=0.10,
                        template-haskell >=2.9,
                        transformers >=0.4,
                        attoparsec-binary >=0.2,
                        attoparsec >=0.13,
                        hashable >= 1.2.4,
                        process >= 1.2.3
    hs-source-dirs:     src
    include-dirs:       include,
                        ../../../../core/include
    default-language:   Haskell2010
