name:               insieme-hat
version:            0.2
synopsis:           "Analysis framework based on ideas from the book: Principles of Program Analysis."
license:            GPL-3
author:             Thomas Prokosch <tprokos@dps.uibk.ac.at>, Alex Hirsch <alexander.hirsch@uibk.ac.at>
maintainer:         Thomas Prokosch <tprokos@dps.uibk.ac.at>
build-type:         Simple
cabal-version:      >=1.10

executable insieme-hat
    main-is:            Main.hs
    other-modules:      Insieme.Analysis.Entities.DataPath,
                        Insieme.Analysis.Entities.FieldIndex,
                        Insieme.Analysis.Entities.ProgramPoint,
                        Insieme.Analysis.Entities.SymbolicFormula,
                        Insieme.Analysis.Alias,
                        Insieme.Analysis.Arithmetic,
                        Insieme.Analysis.Boolean,
                        Insieme.Analysis.Callable,
                        Insieme.Analysis.CallSite,
                        Insieme.Analysis.DataPath,
                        Insieme.Analysis.ExitPoint,
                        Insieme.Analysis.Identifier,
                        Insieme.Analysis.Predecessor,
                        Insieme.Analysis.Reference,
                        Insieme.Analysis.Framework.Dataflow,
                        Insieme.Analysis.Framework.ProgramPoint,
                        Insieme.Analysis.Framework.MemoryState,
                        Insieme.Analysis.Framework.Utils.OperatorHandler,
                        Insieme.Analysis.Framework.PropertySpace.ComposedValue,
                        Insieme.Analysis.Framework.PropertySpace.ValueTree,
                        Insieme.Analysis.Reachable,
                        Insieme.Analysis.Solver,
                        Insieme.Inspire,
                        Insieme.Inspire.BinaryParser,
                        Insieme.Inspire.NodeAddress,
                        Insieme.Inspire.ThHelpers,
                        Insieme.Inspire.Utils,
                        Insieme.Utils.Arithmetic,
                        Insieme.Utils.ParseInt,
                        Insieme.Utils.BoundSet,
                        Insieme.Utils.UnboundSet
    build-depends:      attoparsec >=0.13,
                        attoparsec-binary >=0.2,
                        base >=4.7,
                        bytestring >=0.10,
                        containers >=0.5,
                        hashable >= 1.2.4,
                        lens >=4.13,
                        mtl >=2.2,
                        pretty-show >=1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >=2.9,
                        transformers >=0.4
    hs-source-dirs:     src
    include-dirs:       include,
                        ../../../../core/include
    default-language:   Haskell2010

library
    exposed-modules:    Insieme.Adapter
    other-modules:      Insieme.Analysis.Entities.DataPath,
                        Insieme.Analysis.Entities.FieldIndex,
                        Insieme.Analysis.Entities.ProgramPoint,
                        Insieme.Analysis.Entities.SymbolicFormula,
                        Insieme.Analysis.Alias,
                        Insieme.Analysis.Arithmetic,
                        Insieme.Analysis.Boolean,
                        Insieme.Analysis.Callable,
                        Insieme.Analysis.CallSite,
                        Insieme.Analysis.DataPath,
                        Insieme.Analysis.ExitPoint,
                        Insieme.Analysis.Identifier,
                        Insieme.Analysis.Predecessor,
                        Insieme.Analysis.Reference,
                        Insieme.Analysis.Framework.Dataflow,
                        Insieme.Analysis.Framework.ProgramPoint,
                        Insieme.Analysis.Framework.MemoryState,
                        Insieme.Analysis.Framework.Utils.OperatorHandler,
                        Insieme.Analysis.Framework.PropertySpace.ComposedValue,
                        Insieme.Analysis.Framework.PropertySpace.ValueTree,
                        Insieme.Analysis.Reachable,
                        Insieme.Analysis.Solver,
                        Insieme.Inspire,
                        Insieme.Inspire.BinaryParser,
                        Insieme.Inspire.NodeAddress,
                        Insieme.Inspire.ThHelpers,
                        Insieme.Inspire.Utils,
                        Insieme.Utils.Arithmetic,
                        Insieme.Utils.ParseInt,
                        Insieme.Utils.BoundSet,
                        Insieme.Utils.UnboundSet
    build-depends:      attoparsec >=0.13,
                        attoparsec-binary >=0.2,
                        base >=4.7,
                        bytestring >=0.10,
                        containers >=0.5,
                        hashable >= 1.2.4,
                        lens >=4.13,
                        mtl >=2.2,
                        pretty-show >=1.6,
                        process >= 1.2.3,
                        split >= 0.2.3.1,
                        template-haskell >=2.9,
                        transformers >=0.4
    hs-source-dirs:     src
    include-dirs:       include,
                        ../../../../core/include
    default-language:   Haskell2010

test-suite test
    hs-source-dirs:     tests, src
    main-is:            test.hs
    other-modules:      BoundSet,
                        Formula,
                        ParseInt,
                        Insieme.Utils.Arithmetic,
                        Insieme.Utils.BoundSet,
                        Insieme.Utils.ParseInt
    build-depends:      base >= 4.7,
                        containers >=0.5,
                        tasty >= 0.11,
                        tasty-hunit >= 0.9
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
